--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx2048M
+kotlin.daemon.jvmargs=-Xmx4096M
 
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
@@ -13,3 +13,5 @@ android.useAndroidX=true
 io.ktor.development=true
 
 kotlin.native.ignoreDisabledTargets=true
+
+org.jetbrains.compose.experimental.jscanvas.enabled=true
